--- a/discipleship.html
+++ b/discipleship.html
@@ -11,14 +11,18 @@
 document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
 
 // Check that all required assets are uploaded and up-to-date
-if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.musepolyfill.bgsize.js", "webpro.js", "musewpslideshow.js", "jquery.museoverlay.js", "touchswipe.js", "jquery.watch.js", "require.js", "discipleship.css"], "outOfDate":[]};
+if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.musepolyfill.bgsize.js", "jquery.watch.js", "webpro.js", "musewpslideshow.js", "jquery.museoverlay.js", "touchswipe.js", "require.js", "discipleship.css"], "outOfDate":[]};
 </script>
   
   <title>Discipleship</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=517215909"/>
   <link rel="stylesheet" type="text/css" href="css/master_master.css?crc=4200611759"/>
-  <link rel="stylesheet" type="text/css" href="css/discipleship.css?crc=3925486419" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/discipleship.css?crc=3915093153" id="pagesheet"/>
+  <!-- IE-only CSS -->
+  <!--[if lt IE 9]>
+  <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_master.css?crc=3824530138" id="nomq_pagesheet"/>
+  <![endif]-->
   <!-- Other scripts -->
   <script type="text/javascript">
    var __adobewebfontsappname__ = "muse";
@@ -28,7 +32,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//webfonts.creativecloud.com/open-sans:n4:default;abel:n4:default.js" type="text/javascript">\x3C/script>');
 </script>
   <script type="text/javascript">
-   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/sgLbuFxwt4Cf_cDVN-Z7Ra4LHppwuMkdXqvZIkD66cvfeCJgfO-IbgJGwQMX5QIXw8vDwAwoFR6U5AsKZAmRFRSDZAZq52qajQbujh9DFA485sTKHKoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9CjcBR-aFXjAi8OciyihU8S1m0-WsTdcS0da41OcBuOYiaikoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9KfAZTScIlShB0SkGHfFczMsMMeMb6MKGHfFhzMsMMeMw6MqGIQWmDZZMgr7e9369.js" type="text/javascript">\x3C/script>');
+   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/0cihmFmRhwXlVtNyn81UWbOItA7yHR4M7Bwn-SUqf5bfeCJgfO-IbgJGwQMX5QIXw8vDwAwoFR6U5AsKZAmRFRSDZAZq52qajQbujh9DFA485sTKHKoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9CjcBR-aFXjAi8OciyihU8S1m0-WsTdcS0da41OcBuOYiaikoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9KfAZTScIlShB0SkGHfFczMsMMeMb6MKGHfFhzMsMMeMw6MqGIQWmDZZMg7OP9369.js" type="text/javascript">\x3C/script>');
 </script>
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -79,18 +83,18 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      <div class="clearfix colelem" id="u29141"><!-- group -->
       <div class="clearfix grpelem" id="pu28910"><!-- column -->
        <!-- m_editable region-id="editable-static-tag-U28910-BP_infinity" template="discipleship.html" data-type="html" data-ice-options="clickable" data-ice-editable="link" -->
-       <a class="nonblock nontext rounded-corners clip_frame colelem" id="u28910" href="a.html" data-href="page:U29579" data-muse-uid="U28910"><!-- svg --><img class="svg" id="u28908" src="images/pasted-svg-442x442.svg?crc=3851854807" alt="" data-mu-svgfallback="images/pasted%20svg%20442x442_poster_.png?crc=428143309" data-image-width="442" data-image-height="442"/></a>
+       <a class="nonblock nontext rounded-corners clip_frame colelem" id="u28910" href="a.html" data-href="page:U29579" data-muse-uid="U28910"><!-- svg --><img class="svg" id="u28908" src="images/pasted-svg-442x442.svg?crc=3851854807" alt="" data-mu-svgfallback="images/pasted%20svg%20442x442_poster_.png?crc=3777025788" data-image-width="475" data-image-height="475"/></a>
        <!-- /m_editable -->
        <!-- m_editable region-id="editable-static-tag-U28988-BP_infinity" template="discipleship.html" data-type="html" data-ice-options="clickable" data-ice-editable="link" -->
-       <a class="nonblock nontext rounded-corners clip_frame colelem" id="u28988" href="c.html" data-href="page:U30787" data-muse-uid="U28988"><!-- svg --><img class="svg" id="u28986" src="images/pasted-svg-442x4422.svg?crc=4035470560" alt="" data-mu-svgfallback="images/pasted%20svg%20442x442_poster_2.png?crc=168053251" data-image-width="442" data-image-height="442"/></a>
+       <a class="nonblock nontext rounded-corners clip_frame colelem" id="u28988" href="c.html" data-href="page:U30787" data-muse-uid="U28988"><!-- svg --><img class="svg" id="u28986" src="images/pasted-svg-442x4422.svg?crc=4035470560" alt="" data-mu-svgfallback="images/pasted%20svg%20442x442_poster_2.png?crc=75710754" data-image-width="475" data-image-height="475"/></a>
        <!-- /m_editable -->
       </div>
       <div class="clearfix grpelem" id="pu28979"><!-- column -->
        <!-- m_editable region-id="editable-static-tag-U28979-BP_infinity" template="discipleship.html" data-type="html" data-ice-options="clickable" data-ice-editable="link" -->
-       <a class="nonblock nontext rounded-corners clip_frame colelem" id="u28979" href="b.html" data-href="page:U30753" data-muse-uid="U28979"><!-- svg --><img class="svg" id="u28977" src="images/pasted-svg-442x4423.svg?crc=4022693321" alt="" data-mu-svgfallback="images/pasted%20svg%20442x442_poster_3.png?crc=4223545813" data-image-width="442" data-image-height="442"/></a>
+       <a class="nonblock nontext rounded-corners clip_frame colelem" id="u28979" href="b.html" data-href="page:U30753" data-muse-uid="U28979"><!-- svg --><img class="svg" id="u28977" src="images/pasted-svg-442x4423.svg?crc=4022693321" alt="" data-mu-svgfallback="images/pasted%20svg%20442x442_poster_3.png?crc=4044169318" data-image-width="475" data-image-height="475"/></a>
        <!-- /m_editable -->
        <!-- m_editable region-id="editable-static-tag-U28997-BP_infinity" template="discipleship.html" data-type="html" data-ice-options="clickable" data-ice-editable="link" -->
-       <a class="nonblock nontext rounded-corners clip_frame colelem" id="u28997" href="d.html" data-href="page:U30821" data-muse-uid="U28997"><!-- svg --><img class="svg" id="u28995" src="images/pasted-svg-442x4424.svg?crc=45327515" alt="" data-mu-svgfallback="images/pasted%20svg%20442x442_poster_4.png?crc=267672148" data-image-width="442" data-image-height="442"/></a>
+       <a class="nonblock nontext rounded-corners clip_frame colelem" id="u28997" href="d.html" data-href="page:U30821" data-muse-uid="U28997"><!-- svg --><img class="svg" id="u28995" src="images/pasted-svg-442x4424.svg?crc=45327515" alt="" data-mu-svgfallback="images/pasted%20svg%20442x442_poster_4.png?crc=365001838" data-image-width="475" data-image-height="475"/></a>
        <!-- /m_editable -->
       </div>
      </div>
@@ -117,7 +121,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     <!-- /m_editable -->
     <div class="colelem" id="u6188"><!-- simple frame --></div>
    </div>
-   <div class="verticalspacer" data-offset-top="1314" data-content-above-spacer="1314" data-content-below-spacer="80"></div>
+   <div class="verticalspacer" data-offset-top="1405" data-content-above-spacer="1404" data-content-below-spacer="80"></div>
    <a class="nonblock nontext rounded-corners clearfix grpelem" id="u5290-4" href="index.html" data-href="page:U782"><!-- content --><p id="u5290-2">RETURN HOME</p></a>
   </div>
   <!-- Other scripts -->
